// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:TabsTransferPicker 1`] = `
<body
  class=""
  style=""
>
  <div>
    <div
      class="cxd-Page"
    >
      <div
        class="cxd-Page-content"
      >
        <div
          class="cxd-Page-main"
        >
          <div
            class="cxd-Page-body"
          >
            <div
              class="cxd-Panel cxd-Panel--default cxd-Panel--form"
              style="position: relative;"
            >
              <div
                class="cxd-Panel-heading"
              >
                <h3
                  class="cxd-Panel-title"
                >
                  <span
                    class="cxd-TplField"
                  >
                    <span>
                      表单
                    </span>
                  </span>
                </h3>
              </div>
              <div
                class="cxd-Panel-body"
              >
                <form
                  class="cxd-Form cxd-Form--normal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <div
                    class="cxd-Form-item cxd-Form-item--normal"
                    data-role="form-item"
                  >
                    <label
                      class="cxd-Form-label"
                    >
                      <span>
                        <span
                          class="cxd-TplField"
                        >
                          <span>
                            选人
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="cxd-TabsTransferControl cxd-Form-control"
                    >
                      <div
                        class="cxd-ResultBox cxd-TransferPicker is-clickable is-group"
                        tabindex="-1"
                      >
                        <div
                          class="cxd-ResultBox-value-wrap"
                        >
                          <div
                            class="cxd-ResultBox-value"
                          >
                            <span
                              class="cxd-ResultBox-valueLabel"
                            >
                              <span>
                                诸葛亮
                              </span>
                            </span>
                            <a
                              data-index="0"
                            >
                              <icon-mock
                                classname="icon icon-close"
                                icon="close"
                              />
                            </a>
                          </div>
                          <span
                            class="cxd-TransferPicker-icon"
                          >
                            <icon-mock
                              classname="icon icon-pencil"
                              icon="pencil"
                            />
                          </span>
                        </div>
                        <div
                          class="cxd-ResultBox-actions"
                        />
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="cxd-Panel-footerWrap"
              >
                <div
                  class="cxd-Panel-btnToolbar cxd-Panel-footer"
                >
                  <button
                    class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                    type="submit"
                  >
                    <span>
                      提交
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="resize-sensor"
                style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
  
                <div
                  class="resize-sensor-expand"
                  style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                >
                  
    
                  <div
                    style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                  />
                  
  
                </div>
                
  
                <div
                  class="resize-sensor-shrink"
                  style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                >
                  
    
                  <div
                    style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                  />
                  
  
                </div>
                
  
                <div
                  class="resize-sensor-appear"
                  style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Renderer:TabsTransferPicker: dialog open 1`] = `
<body
  class="is-modalOpened"
  style="width: calc(100% - 0px);"
>
  <div>
    <div
      class="cxd-Page"
    >
      <div
        class="cxd-Page-content"
      >
        <div
          class="cxd-Page-main"
        >
          <div
            class="cxd-Page-body"
          >
            <div
              class="cxd-Panel cxd-Panel--default cxd-Panel--form"
              style="position: relative;"
            >
              <div
                class="cxd-Panel-heading"
              >
                <h3
                  class="cxd-Panel-title"
                >
                  <span
                    class="cxd-TplField"
                  >
                    <span>
                      表单
                    </span>
                  </span>
                </h3>
              </div>
              <div
                class="cxd-Panel-body"
              >
                <form
                  class="cxd-Form cxd-Form--normal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <div
                    class="cxd-Form-item cxd-Form-item--normal"
                    data-role="form-item"
                  >
                    <label
                      class="cxd-Form-label"
                    >
                      <span>
                        <span
                          class="cxd-TplField"
                        >
                          <span>
                            选人
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="cxd-TabsTransferControl cxd-Form-control"
                    >
                      <div
                        class="cxd-ResultBox cxd-TransferPicker is-active is-clickable is-group"
                        tabindex="-1"
                      >
                        <div
                          class="cxd-ResultBox-value-wrap"
                        >
                          <span
                            class="cxd-ResultBox-placeholder"
                          >
                            请选择
                          </span>
                          <span
                            class="cxd-TransferPicker-icon"
                          >
                            <icon-mock
                              classname="icon icon-pencil"
                              icon="pencil"
                            />
                          </span>
                        </div>
                        <div
                          class="cxd-ResultBox-actions"
                        />
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="cxd-Panel-footerWrap"
              >
                <div
                  class="cxd-Panel-btnToolbar cxd-Panel-footer"
                >
                  <button
                    class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                    type="submit"
                  >
                    <span>
                      提交
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="resize-sensor"
                style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
  
                <div
                  class="resize-sensor-expand"
                  style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                >
                  
    
                  <div
                    style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                  />
                  
  
                </div>
                
  
                <div
                  class="resize-sensor-shrink"
                  style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                >
                  
    
                  <div
                    style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                  />
                  
  
                </div>
                
  
                <div
                  class="resize-sensor-appear"
                  style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget cxd-Modal cxd-Modal--md cxd-Modal--1th"
    role="dialog"
  >
    <div
      class="cxd-Modal-overlay in"
    />
    <div
      class="cxd-Modal-content"
    >
      <div
        class="cxd-Modal-header"
        locale="zh-CN"
        theme="cxd"
      >
        <a
          class="cxd-Modal-close"
          data-position="left"
          data-tooltip="关闭"
        >
          <icon-mock
            classname="icon icon-close"
            icon="close"
          />
        </a>
        请选择
      </div>
      <div
        class="cxd-Modal-body"
        theme="cxd"
      >
        <div
          class="cxd-Transfer cxd-TabsTransfer"
        >
          <div
            class="cxd-Transfer-select"
          >
            <div
              class="cxd-Tabs cxd-Tabs--line cxd-TabsTransfer-tabs"
            >
              <div
                class="cxd-Tabs-linksContainer-wrapper"
                style="position: relative;"
              >
                <div
                  class="cxd-Tabs-linksContainer"
                >
                  <div
                    class="cxd-Tabs-linksContainer-main"
                  >
                    <ul
                      class="cxd-Tabs-links"
                      role="tablist"
                    >
                      <li
                        class="cxd-Tabs-link is-active"
                      >
                        <a
                          title="成员"
                        >
                          成员
                        </a>
                      </li>
                      <li
                        class="cxd-Tabs-link"
                      >
                        <a
                          title="角色"
                        >
                          角色
                        </a>
                      </li>
                      <li
                        class="cxd-Tabs-link"
                      >
                        <a
                          title="部门"
                        >
                          部门
                        </a>
                      </li>
                    </ul>
                  </div>
                </div>
                <div
                  class="resize-sensor"
                  style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
                >
                  
  
                  <div
                    class="resize-sensor-expand"
                    style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                  >
                    
    
                    <div
                      style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                    />
                    
  
                  </div>
                  
  
                  <div
                    class="resize-sensor-shrink"
                    style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                  >
                    
    
                    <div
                      style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                    />
                    
  
                  </div>
                  
  
                  <div
                    class="resize-sensor-appear"
                    style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
                  />
                </div>
              </div>
              <div
                class="cxd-Tabs-content"
              >
                <div
                  class="in is-active cxd-Tabs-pane cxd-TabsTransfer-tab"
                >
                  <div
                    class="cxd-TreeSelection cxd-Transfer-checkboxes"
                  >
                    <div
                      class="cxd-TreeSelection-item is-expanded"
                    >
                      <div
                        class="cxd-TreeSelection-itemInner is-active"
                      >
                        <a
                          class="cxd-Table-expandBtn is-active"
                        >
                          <icon-mock
                            classname="icon icon-right-arrow-bold"
                            icon="right-arrow-bold"
                          />
                        </a>
                        <label
                          class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                        >
                          <input
                            type="checkbox"
                          />
                          <i />
                          <span
                            class=""
                          />
                        </label>
                        <div
                          class="cxd-TreeSelection-itemLabel"
                        >
                          <span
                            class="cxd-TplField"
                          >
                            <span>
                              <div
                                class="flex justify-between"
                              >
                                <span>
                                  法师
                                </span>
                              </div>
                            </span>
                          </span>
                        </div>
                      </div>
                      <div
                        class="cxd-TreeSelection-sublist"
                      >
                        <div
                          class="cxd-TreeSelection-item"
                        >
                          <div
                            class="cxd-TreeSelection-itemInner is-active"
                          >
                            <label
                              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                            >
                              <input
                                type="checkbox"
                              />
                              <i />
                              <span
                                class=""
                              />
                            </label>
                            <div
                              class="cxd-TreeSelection-itemLabel"
                            >
                              <span
                                class="cxd-TplField"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      诸葛亮
                                    </span>
                                    <div
                                      class="text-muted m-r-xs text-sm text-right"
                                    >
                                      zhugeliang@timi.com
                                      <br />
                                      13111111111
                                    </div>
                                  </div>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="cxd-TreeSelection-item"
                    >
                      <div
                        class="cxd-TreeSelection-itemInner"
                      >
                        <a
                          class="cxd-Table-expandBtn"
                        >
                          <icon-mock
                            classname="icon icon-right-arrow-bold"
                            icon="right-arrow-bold"
                          />
                        </a>
                        <label
                          class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                        >
                          <input
                            type="checkbox"
                          />
                          <i />
                          <span
                            class=""
                          />
                        </label>
                        <div
                          class="cxd-TreeSelection-itemLabel"
                        >
                          <span
                            class="cxd-TplField"
                          >
                            <span>
                              <div
                                class="flex justify-between"
                              >
                                <span>
                                  战士
                                </span>
                              </div>
                            </span>
                          </span>
                        </div>
                      </div>
                      <div
                        class="cxd-TreeSelection-sublist"
                      >
                        <div
                          class="cxd-TreeSelection-item"
                        >
                          <div
                            class="cxd-TreeSelection-itemInner"
                          >
                            <label
                              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                            >
                              <input
                                type="checkbox"
                              />
                              <i />
                              <span
                                class=""
                              />
                            </label>
                            <div
                              class="cxd-TreeSelection-itemLabel"
                            >
                              <span
                                class="cxd-TplField"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      曹操
                                    </span>
                                    <div
                                      class="text-muted m-r-xs text-sm text-right"
                                    >
                                      caocao@timi.com
                                      <br />
                                      13111111111
                                    </div>
                                  </div>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="cxd-TreeSelection-item"
                        >
                          <div
                            class="cxd-TreeSelection-itemInner"
                          >
                            <label
                              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                            >
                              <input
                                type="checkbox"
                              />
                              <i />
                              <span
                                class=""
                              />
                            </label>
                            <div
                              class="cxd-TreeSelection-itemLabel"
                            >
                              <span
                                class="cxd-TplField"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      钟无艳
                                    </span>
                                    <div
                                      class="text-muted m-r-xs text-sm text-right"
                                    >
                                      zhongwuyan@timi.com
                                      <br />
                                      13111111111
                                    </div>
                                  </div>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="cxd-TreeSelection-item"
                    >
                      <div
                        class="cxd-TreeSelection-itemInner"
                      >
                        <a
                          class="cxd-Table-expandBtn"
                        >
                          <icon-mock
                            classname="icon icon-right-arrow-bold"
                            icon="right-arrow-bold"
                          />
                        </a>
                        <label
                          class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                        >
                          <input
                            type="checkbox"
                          />
                          <i />
                          <span
                            class=""
                          />
                        </label>
                        <div
                          class="cxd-TreeSelection-itemLabel"
                        >
                          <span
                            class="cxd-TplField"
                          >
                            <span>
                              <div
                                class="flex justify-between"
                              >
                                <span>
                                  打野
                                </span>
                              </div>
                            </span>
                          </span>
                        </div>
                      </div>
                      <div
                        class="cxd-TreeSelection-sublist"
                      >
                        <div
                          class="cxd-TreeSelection-item"
                        >
                          <div
                            class="cxd-TreeSelection-itemInner"
                          >
                            <label
                              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                            >
                              <input
                                type="checkbox"
                              />
                              <i />
                              <span
                                class=""
                              />
                            </label>
                            <div
                              class="cxd-TreeSelection-itemLabel"
                            >
                              <span
                                class="cxd-TplField"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      李白
                                    </span>
                                    <div
                                      class="text-muted m-r-xs text-sm text-right"
                                    >
                                      libai@timi.com
                                      <br />
                                      13111111111
                                    </div>
                                  </div>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="cxd-TreeSelection-item"
                        >
                          <div
                            class="cxd-TreeSelection-itemInner"
                          >
                            <label
                              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                            >
                              <input
                                type="checkbox"
                              />
                              <i />
                              <span
                                class=""
                              />
                            </label>
                            <div
                              class="cxd-TreeSelection-itemLabel"
                            >
                              <span
                                class="cxd-TplField"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      韩信
                                    </span>
                                    <div
                                      class="text-muted m-r-xs text-sm text-right"
                                    >
                                      hanxin@timi.com
                                      <br />
                                      13111111111
                                    </div>
                                  </div>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="cxd-TreeSelection-item"
                        >
                          <div
                            class="cxd-TreeSelection-itemInner"
                          >
                            <label
                              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                            >
                              <input
                                type="checkbox"
                              />
                              <i />
                              <span
                                class=""
                              />
                            </label>
                            <div
                              class="cxd-TreeSelection-itemLabel"
                            >
                              <span
                                class="cxd-TplField"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      云中君
                                    </span>
                                    <div
                                      class="text-muted m-r-xs text-sm text-right"
                                    >
                                      yunzhongjun@timi.com
                                      <br />
                                      13111111111
                                    </div>
                                  </div>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="cxd-Tabs-pane cxd-TabsTransfer-tab"
                >
                  <div
                    class="cxd-GroupedSelection cxd-Transfer-checkboxes"
                  >
                    <div
                      class="cxd-GroupedSelection-item"
                    >
                      <label
                        class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                      >
                        <input
                          type="checkbox"
                        />
                        <i />
                        <span
                          class=""
                        />
                      </label>
                      <div
                        class="cxd-GroupedSelection-itemLabel"
                      >
                        <span
                          class="cxd-TplField"
                        >
                          <span>
                            <div
                              class="flex justify-between"
                            >
                              <span>
                                角色 1
                              </span>
                            </div>
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="cxd-GroupedSelection-item"
                    >
                      <label
                        class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                      >
                        <input
                          type="checkbox"
                        />
                        <i />
                        <span
                          class=""
                        />
                      </label>
                      <div
                        class="cxd-GroupedSelection-itemLabel"
                      >
                        <span
                          class="cxd-TplField"
                        >
                          <span>
                            <div
                              class="flex justify-between"
                            >
                              <span>
                                角色 2
                              </span>
                            </div>
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="cxd-GroupedSelection-item"
                    >
                      <label
                        class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                      >
                        <input
                          type="checkbox"
                        />
                        <i />
                        <span
                          class=""
                        />
                      </label>
                      <div
                        class="cxd-GroupedSelection-itemLabel"
                      >
                        <span
                          class="cxd-TplField"
                        >
                          <span>
                            <div
                              class="flex justify-between"
                            >
                              <span>
                                角色 3
                              </span>
                            </div>
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      class="cxd-GroupedSelection-item"
                    >
                      <label
                        class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                      >
                        <input
                          type="checkbox"
                        />
                        <i />
                        <span
                          class=""
                        />
                      </label>
                      <div
                        class="cxd-GroupedSelection-itemLabel"
                      >
                        <span
                          class="cxd-TplField"
                        >
                          <span>
                            <div
                              class="flex justify-between"
                            >
                              <span>
                                角色 4
                              </span>
                            </div>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="cxd-Tabs-pane cxd-TabsTransfer-tab"
                >
                  <div
                    class="cxd-TreeSelection cxd-Transfer-checkboxes"
                  >
                    <div
                      class="cxd-TreeSelection-item is-expanded"
                    >
                      <div
                        class="cxd-TreeSelection-itemInner"
                      >
                        <a
                          class="cxd-Table-expandBtn is-active"
                        >
                          <icon-mock
                            classname="icon icon-right-arrow-bold"
                            icon="right-arrow-bold"
                          />
                        </a>
                        <label
                          class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                        >
                          <input
                            type="checkbox"
                          />
                          <i />
                          <span
                            class=""
                          />
                        </label>
                        <div
                          class="cxd-TreeSelection-itemLabel"
                        >
                          <span
                            class="cxd-TplField"
                          >
                            <span>
                              <div
                                class="flex justify-between"
                              >
                                <span>
                                  总部
                                </span>
                              </div>
                            </span>
                          </span>
                        </div>
                      </div>
                      <div
                        class="cxd-TreeSelection-sublist"
                      >
                        <div
                          class="cxd-TreeSelection-item"
                        >
                          <div
                            class="cxd-TreeSelection-itemInner"
                          >
                            <a
                              class="cxd-Table-expandBtn"
                            >
                              <icon-mock
                                classname="icon icon-right-arrow-bold"
                                icon="right-arrow-bold"
                              />
                            </a>
                            <label
                              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                            >
                              <input
                                type="checkbox"
                              />
                              <i />
                              <span
                                class=""
                              />
                            </label>
                            <div
                              class="cxd-TreeSelection-itemLabel"
                            >
                              <span
                                class="cxd-TplField"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      部门 1
                                    </span>
                                  </div>
                                </span>
                              </span>
                            </div>
                          </div>
                          <div
                            class="cxd-TreeSelection-sublist"
                          >
                            <div
                              class="cxd-TreeSelection-item"
                            >
                              <div
                                class="cxd-TreeSelection-itemInner"
                              >
                                <label
                                  class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                                >
                                  <input
                                    type="checkbox"
                                  />
                                  <i />
                                  <span
                                    class=""
                                  />
                                </label>
                                <div
                                  class="cxd-TreeSelection-itemLabel"
                                >
                                  <span
                                    class="cxd-TplField"
                                  >
                                    <span>
                                      <div
                                        class="flex justify-between"
                                      >
                                        <span>
                                          部门 4
                                        </span>
                                      </div>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                            <div
                              class="cxd-TreeSelection-item"
                            >
                              <div
                                class="cxd-TreeSelection-itemInner"
                              >
                                <label
                                  class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                                >
                                  <input
                                    type="checkbox"
                                  />
                                  <i />
                                  <span
                                    class=""
                                  />
                                </label>
                                <div
                                  class="cxd-TreeSelection-itemLabel"
                                >
                                  <span
                                    class="cxd-TplField"
                                  >
                                    <span>
                                      <div
                                        class="flex justify-between"
                                      >
                                        <span>
                                          部门 5
                                        </span>
                                      </div>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="cxd-TreeSelection-item"
                        >
                          <div
                            class="cxd-TreeSelection-itemInner"
                          >
                            <label
                              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                            >
                              <input
                                type="checkbox"
                              />
                              <i />
                              <span
                                class=""
                              />
                            </label>
                            <div
                              class="cxd-TreeSelection-itemLabel"
                            >
                              <span
                                class="cxd-TplField"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      部门 2
                                    </span>
                                  </div>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="cxd-TreeSelection-item"
                        >
                          <div
                            class="cxd-TreeSelection-itemInner"
                          >
                            <label
                              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                            >
                              <input
                                type="checkbox"
                              />
                              <i />
                              <span
                                class=""
                              />
                            </label>
                            <div
                              class="cxd-TreeSelection-itemLabel"
                            >
                              <span
                                class="cxd-TplField"
                              >
                                <span>
                                  <div
                                    class="flex justify-between"
                                  >
                                    <span>
                                      部门 3
                                    </span>
                                  </div>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="cxd-Transfer-mid"
          />
          <div
            class="cxd-Transfer-result"
          >
            <div
              class="cxd-Transfer-title"
            >
              <span>
                已选项
              </span>
              <a
                class="cxd-Transfer-clearAll"
              >
                清空
              </a>
            </div>
            <div
              class="cxd-Selections cxd-Transfer-value"
            >
              <div
                class="cxd-Selections-items"
              >
                <div
                  class="cxd-Selections-item"
                >
                  <label
                    class="cxd-Selections-label"
                  >
                    <span
                      class="cxd-TplField"
                    >
                      <span>
                        诸葛亮(zhugeliang)
                      </span>
                    </span>
                  </label>
                  <a
                    class="cxd-Selections-delBtn"
                    data-index="0"
                  >
                    <icon-mock
                      classname="icon icon-close"
                      icon="close"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cxd-Modal-footer"
        theme="cxd"
      >
        <button
          class="cxd-Button cxd-Button--default cxd-Button--size-default"
          type="button"
        >
          取消
        </button>
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="button"
        >
          确认
        </button>
      </div>
    </div>
  </div>
</body>
`;
